--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "android": "ionic cap open android"
   },
   "dependencies": {
     "@angular/animations": "^18.0.0",
